--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,9 @@
   padding: 6rem;
   min-height: 100vh;
 }
-
+img {
+  display: none !important;
+}
 .description {
   display: inherit;
   justify-content: inherit;
